feature: added scss for styling

--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -3,10 +3,10 @@
   <strong>Title:</strong>
   <%= @todo_list.title %>
 </p>
-<%# <p> %>
-  <%# <strong>Description:</strong> %>
-  <%# <%= @todo_list.description %> 
-<%# </p> %>
+<p>
+  <strong>Description:</strong>
+  <%= @todo_list.description %> 
+</p>
 <div id="todo_items_wrapper">
  <%= render @todo_list.todo_items %>
  <div id="form">
